# hovergames

./: FRDM-K64F.json  FRDM-K64F_manifest_v3_5.xml  FRDM-K64F_manifest_v3_6.xml  README.md  SW-Content-Register.txt
boards/frdmk64f/demo_apps/mlx90614_irtemp_sensor/: mlx90614.c  mlx90614.h  mlx90614_irtemp_sensor.c  mlx90614_irtemp_sensor.xml  readme.txt
boards/frdmk64f/demo_apps/mlx90614_irtemp_sensor/armgcc/: CMakeLists.txt
boards/frdmk64f/demo_apps/mlx90614_irtemp_sensor/board/: pin_mux.c  pin_mux.h
boards/frdmk64f/demo_apps/mlx90614_irtemp_sensor/iar/: mlx90614_irtemp_sensor.ewp  mlx90614_irtemp_sensor.eww
boards/frdmk64f/demo_apps/mlx90614_irtemp_sensor/mdk/: mlx90614_irtemp_sensor.uvmpw  mlx90614_irtemp_sensor.uvprojx
boards/frdmk64f/hovergames_examples/drone_command/: drone_command.c  drone_command.xml  pin_mux.c  pin_mux.h  readme.txt
boards/frdmk64f/hovergames_examples/drone_command/armgcc/: CMakeLists.txt
boards/frdmk64f/hovergames_examples/drone_command/iar/: drone_command.ewp  drone_command.eww
boards/frdmk64f/hovergames_examples/drone_command/mdk/: drone_command.uvmpw  drone_command.uvprojx
boards/frdmk64f/hovergames_examples/drone_rtos/: FreeRTOSConfig.h  drone_rtos.c  drone_rtos.xml  pin_mux.c  pin_mux.h  readme.txt
boards/frdmk64f/hovergames_examples/drone_rtos/armgcc/: CMakeLists.txt
boards/frdmk64f/hovergames_examples/drone_rtos/iar/: drone_rtos.ewp  drone_rtos.eww
boards/frdmk64f/hovergames_examples/drone_rtos/mdk/: drone_rtos.uvmpw  drone_rtos.uvprojx
boards/frdmk64f/hovergames_examples/drone_track/: drone_track.c  drone_track.xml  readme.txt
boards/frdmk64f/hovergames_examples/drone_track/armgcc/: CMakeLists.txt
boards/frdmk64f/hovergames_examples/drone_track/iar/: drone_track.ewp  drone_track.eww
boards/frdmk64f/hovergames_examples/drone_track/mdk/: MK64FN1M0xxx12_flash.scf  drone_track.uvmpw  drone_track.uvprojx
boards/frdmk64f/mavlink_examples/mavlink_commander/: mavlink_commander.c  mavlink_commander.xml  pin_mux.c  pin_mux.h  readme.txt
boards/frdmk64f/mavlink_examples/mavlink_commander/armgcc/: CMakeLists.txt
boards/frdmk64f/mavlink_examples/mavlink_commander/iar/: mavlink_commander.ewp  mavlink_commander.eww
boards/frdmk64f/mavlink_examples/mavlink_commander/mdk/: mavlink_commander.uvmpw  mavlink_commander.uvprojx
boards/frdmk64f/pixy2_examples/pixy2_basic/: pin_mux.c  pixy2_basic.c  pixy2_basic.xml  readme.txt
boards/frdmk64f/pixy2_examples/pixy2_basic/armgcc/: CMakeLists.txt
boards/frdmk64f/pixy2_examples/pixy2_basic/iar/: pixy2_basic.ewp  pixy2_basic.eww
boards/frdmk64f/pixy2_examples/pixy2_basic/mdk/: pixy2_basic.uvmpw  pixy2_basic.uvprojx
devices/MK64F12/arm/: MK64FN1M0xxx12_ram.scf
devices/MK64F12/drivers/: fsl_common.h
devices/MK64F12/iar/: startup_MK64F12.s
middleware/mavlink/: mavlink_types.h
middleware/ntag_i2c_plus/HAL_ISR/: isr_common.c  isr_driver_intern.h
middleware/ntag_i2c_plus/HAL_ISR/inc/: HAL_ISR_callback_list.h
middleware/ntag_i2c_plus/HAL_NTAG/inc/: ntag_device_list.h
middleware/pixy2/src/: Pixy2Cam.c  Pixy2Cam.h
middleware/pixy2/src/link/dspi/: Pixy2_DSPI.c  Pixy2_DSPI.h
middleware/sdmmc/: ChangeLogKSDK.txt
